pkg/k8s/pgbouncer-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
      - name: pgbouncer
        image: edoburu/pgbouncer:latest
        ports:
        - containerPort: 6432
        volumeMounts:
        - name: config-volume
          mountPath: /etc/pgbouncer
      volumes:
      - name: config-volume
        projected:
          sources:
          - configMap:
              name: pgbouncer-config
              items:
                - key: pgbouncer.ini
                  path: pgbouncer.ini
          - secret:
              name: pgbouncer-secret
              items:
                - key: userlist.txt
                  path: userlist.txt
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-service
spec:
  selector:
    app: pgbouncer
  ports:
  - name: pgbouncer
    port: 6432
    targetPort: 6432
  type: ClusterIP
